# skyrim-community-shaders

./: .clang-format  .clangd  .codecov.yml  .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.js  AGENTS.md  AI-INSTRUCTIONS.md  CMakeLists.txt  CMakeLists.txt.REFLEX  CMakePresets.json  CMakeUserPresets.json.template  NewFeature.cpp  NewFeature.h  PR-1530-SPLIT-PLAN.md  Paper.txt  README.md  Reflex.md  UNIFIED_WATER_REVIEW.md  VR_MENU_README.md  WINDOWS_BUILD_REQUIRED.md  draft.md  vcpkg-configuration.json  vcpkg.json
.claude/: CLAUDE.md  ralph-loop.local.md  settings.local.json
.github/: copilot-instructions.md
.github/configs/: README.md  generate-shader-configs.ps1  shader-validation-vr.yaml  shader-validation.yaml
.github/workflows/: _build.yaml  _reusable-shader-unit-tests.yaml  _shared-build.yaml  auto_format.yaml  build.yaml  cleanup-pr-releases.yaml  lokalise.yaml  maint-cleanup-releases.yaml  maint-todo-issues.yaml  maint-update-wiki.yaml  nexus-upload-on-release.yaml  nexus-upload.yaml  pr-checks.yaml  pr-lint.yaml  pr-wip.yaml  release-build.yaml  release-hotfix.yaml  release-nexus-trigger.yaml  release-semantic.yaml  release.yaml  shader-unit-tests.yaml  style_format.yml  test.yaml  todo.yaml  update-buffers-wiki.yaml  upload-nexus.yaml
cmake/: BufferAlignmentValidation.cmake  CleanupStaleEntries.cmake  CreationEngineRaytracing.cmake  DetectGraphicsTools.cmake  FeatureVersions.h.in  Plugin.h.in  ThemePresets.h.in  XSEPlugin.cmake  XeSS-SDK.cmake  shadertoolsconfig.json.in
cmake/NVAPI/: CMakeLists.txt
docs/: BufferAlignment.md  PR-SUMMARY.md  settings-layering-proposal.md  shader-debugging-ui-mockup.md  shader-debugging.md
docs/development/: README.md  ishdr-bloom-highlight-regression.md  scene-settings-manager.md
docs/investigations/: terrain-variation-performance-assessment.md
docs/weather-system-docs/: InteriorExteriorSettings.md  WeatherVariableRegistration.md
features/RenderDoc/: CORE  README.md
include/: FrameAnnotations.h  PCH.h  ffx_upscale.h  ffx_upscale.hpp
include/reshade/: reshade.hpp
include/xess/: xess.h  xess_d3d11.h  xess_d3d12.h  xess_d3d12_debug.h  xess_debug.h
new-feature-template/: NewFeatureReadme.md
package/Shaders/: AmbientCompositeCS.hlsl  CopyShadowDataCS.hlsl  DICE.hlsl  DeferredCompositeCS.hlsl  DeferredCompositePS.hlsl  DeferredCompositeVS.hlsl  DistantTree.hlsl  DownsampleShadowCS.hlsl  Effect.hlsl  HDRAdvOutputCS.hlsl  HDROutputCS.hlsl  HistogramCS.hlsl  ISApplyVolumetricLighting.hlsl  ISBlur.hlsl  ISCompositeLensFlareVolumetricLighting.hlsl  ISDepthOfField.hlsl  ISHDR.hlsl  ISIBLensFlare.hlsl  ISReflectionsRayTracing.hlsl  ISRefraction.hlsl  ISSAOComposite.hlsl  ISTemporalAA.hlsl  ISVolumetricLightingGenerateCS.hlsl  ISVolumetricLightingRaymarchCS.hlsl  ISWaterBlend.hlsl  Lighting.EnvMap.hlsl  Lighting.LOD.hlsl  Lighting.Land.hlsl  Lighting.TreeAnim.hlsl  Lighting.hlsl  LocalTonemapping.hlsl  Particle.hlsl  RunGrass.hlsl  Sky.hlsl  UIBrightnessCS.hlsl  UICompositeCS.hlsl  Utility.hlsl  VolumetricRaysPS.hlsl  Water.hlsl  water(WORKING).hlsl
scripts/: buffer_scan.py
src/: Buffer.h  BugFix.cpp  BugFix.h  DX12SwapChain.cpp  DX12SwapChain.h  Deferred.cpp  Deferred.h  Effect11.cpp  Effect11.h  EngineFix.cpp  EngineFix.h  Feature.cpp  Feature.h  FeatureBuffer.cpp  FeatureConstraints.cpp  FeatureConstraints.h  FeatureIssues.cpp  FeatureIssues.h  FidelityFX.cpp  FidelityFX.h  FrameAnnotations.cpp  Globals.cpp  Globals.h  Hooks.cpp  Hooks.h  Menu.cpp  Menu.h  RenderDoc.cpp  RenderDoc.h  SceneSettingsManager.cpp  SceneSettingsManager.h  SettingsOverrideManager.cpp  SettingsOverrideManager.h  ShaderCache.cpp  ShaderCache.h  ShaderFileWatcher.cpp  ShaderFileWatcher.h  State.cpp  State.h  Streamline.cpp  (+19 more)
src/.claude/: settings.local.json
src/BugFixes/: ShadowmapCascadeCullingFix.cpp  ShadowmapCascadeCullingFix.h
src/Editor/: EditorWindow.cpp  WeatherUtils.cpp  WeatherUtils.h
src/EngineFixes/: ShadowmapCascadeCullingFix.cpp  ShadowmapCascadeCullingFix.h  ShadowmapCascadeRasterizerFix.cpp  ShadowmapCascadeRasterizerFix.h
src/Features/: CloudRelight.cpp  CloudRelight.h  CloudShadows.cpp  CloudShadows.h  DLSSperf.cpp  DLSSperf.h  DX12Interop.cpp  DX12Interop.h  DeepDVC.cpp  DeepDVC.h  DlssEnhancerFeature.cpp  DlssEnhancerFeature.h  DynamicCubemaps.cpp  DynamicCubemaps.h  ENBPostProcessing.cpp  ENBPostProcessing.h  Effect11.cpp  Effect11.h  EffectShadows.cpp  EffectShadows.h  ExponentialHeightFog.cpp  ExponentialHeightFog.h  ExtendedMaterials.cpp  ExtendedMaterials.h  ExtendedTranslucency.cpp  ExtendedTranslucency.h  GrassCollision.cpp  GrassCollision.h  GrassLighting.cpp  GrassLighting.h  HDR.cpp  HDR.h  HDRDisplay.cpp  HDRDisplay.h  HairSpecular.cpp  HairSpecular.h  HiZOcclusion.cpp  HiZOcclusion.h  IBL.cpp  IBL.h  (+97 more)
src/ImGui/: imgui_impl_win32.cpp  imgui_impl_win32.h
src/Menu/: AdvancedSettingsRenderer.cpp  AdvancedSettingsRenderer.h  BackgroundBlur.cpp  (+19 more)
template/: NewFeature.h
tests/: .gitignore  CMakeLists.txt  CODECOV_SETUP_INSTRUCTIONS.md  QUICKSTART.md  README.md  TEST_GENERATION_SUMMARY.md  TROUBLESHOOTING.md  main.cpp  run_tests.ps1  test_api_contracts.cpp  test_configuration.cpp  test_conversion_utilities.cpp  test_enums_and_types.cpp  test_filesystem.cpp  test_gpu_structures.cpp  test_shader_constants.cpp  test_shader_validation.cpp  test_simple_utilities.cpp
tests/Menu/: AdvancedSettingsRendererTests.cpp  BackgroundBlurRemovalTests.cpp
tests/Shaders/: HairShaderRefactoringTests.cpp  LightingCommonValidation.cpp  LightingEvalValidation.cpp
tests/cpp/: CMakeLists.txt  test_main.cpp  test_subrect.cpp
tests/shaders/: .gitignore  CMakeLists.txt  README.md  minimal_test.cpp  runtime_discovered_tests.cpp  runtime_test_discovery.h  test_brdf.cpp  test_color.cpp  test_common.h  test_displaymapping.cpp  test_fastmath.cpp  test_gbuffer.cpp  test_helpers_unified.h  test_lightingcommon.cpp  test_math.cpp  test_random.cpp
tools/: buffer_alignment_validator.py  feature_version_audit.py  install-worktree-alias.ps1  new-worktree.ps1  update-cmake-version.ps1
(+899 files in other folders)
